// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppThemedExternalLink renders correctly 1`] = `
<Text
  href="https://www.google.com"
  onPress={[Function]}
  role="link"
  style={
    [
      {
        "color": "#151718",
      },
      undefined,
    ]
  }
>
  Snapshot test!
</Text>
`;

exports[`AppThemedExternalLink renders correctly with dark theme 1`] = `
<Text
  href="https://www.google.com"
  onPress={[Function]}
  role="link"
  style={
    [
      {
        "color": "#151718",
      },
      undefined,
    ]
  }
>
  Snapshot test!
</Text>
`;

exports[`AppThemedExternalLink renders correctly with light theme 1`] = `
<Text
  href="https://www.google.com"
  onPress={[Function]}
  role="link"
  style={
    [
      {
        "color": "#FFFFFF",
      },
      undefined,
    ]
  }
>
  Snapshot test!
</Text>
`;
